# roca2pcap

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sample_input.roca  tox.ini
docs/: index.md
src/python_vscode_template2/: __init__.py  my_script.py  pokemon.py
src/roca2pcap/: __init__.py  hex_to_base64.py  roca2pcap.py  tests.py
src/roca2pcap/utils/: hex_to_base64.py
tests/: test_arithmetic.py  test_main.py  test_pokemon.py
