[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python_vscode_template2"
authors = [{name = "David Groves", email = "github@fibrecat.org"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.scripts]
my_script = "python_vscode_template2.my_script:main"

[project.urls]
Home = "https://github.com/davidgroves/Python-VSCode-Template2"

[tool.flit.module]
name = "python_vscode_template2"

[tool.mypy]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# [tool.black]
# line-length = 132

# [tool.pylint.format]
# max-line-length = 132

[tool.ruff]
line-length = 132
indent-width = 4

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "W",
    "I001"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"



