[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "roca2pcap"
authors = [{name = "David Groves", email = "github@fibrecat.org"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}

[project.scripts]
my_script = "roca2pcap.my_script:main"

[project.urls]
Home = "https://github.com/davidgroves/roca2pcap"

[tool.flit.module]
name = "roca2pcap"

[tool.mypy]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# [tool.black]
# line-length = 132

# [tool.pylint.format]
# max-line-length = 132

[tool.ruff]
line-length = 132
indent-width = 4

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "W",
    "I001"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"



